cfn_benchmark/cfn_templates_greenfield/Sage-Bionetworks__Synapse-Stack-Builder/src/test/resources/vpc/private-subnet-green-test.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Creates one public subnet per availability zone.",
  "Resources": {
    "SelfVpc": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.24.0.0/16",
        "EnableDnsSupport": true,
        "EnableDnsHostnames": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${AWS::StackName}-vpc"
            }
          }
        ]
      }
    },
    "SelfNetworkAcl": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "SelfVpc"
        }
      }
    },
    "SelfNetworkAclEntryIngress": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "SelfNetworkAcl"
        },
        "RuleNumber": 100,
        "Protocol": 6,
        "RuleAction": "allow",
        "Egress": false,
        "CidrBlock": "0.0.0.0/0",
        "PortRange": {
          "From": 1024,
          "To": 65535
        }
      }
    },
    "SelfNetworkAclEntryEgressHttps": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "SelfNetworkAcl"
        },
        "RuleNumber": 100,
        "Protocol": 6,
        "RuleAction": "allow",
        "Egress": true,
        "CidrBlock": "0.0.0.0/0",
        "PortRange": {
          "From": 443,
          "To": 443
        }
      }
    },
    "SelfNetworkAclEntryEgressHttp": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "SelfNetworkAcl"
        },
        "RuleNumber": 110,
        "Protocol": 6,
        "RuleAction": "allow",
        "Egress": true,
        "CidrBlock": "0.0.0.0/0",
        "PortRange": {
          "From": 80,
          "To": 80
        }
      }
    },
    "SelfInternetGateway": {
      "Type": "AWS::EC2::InternetGateway"
    },
    "SelfGatewayAttachment": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "SelfVpc"
        },
        "InternetGatewayId": {
          "Ref": "SelfInternetGateway"
        }
      }
    },
    "SelfPublicRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "SelfVpc"
        }
      }
    },
    "SelfPublicRoute": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "SelfGatewayAttachment",
      "Properties": {
        "RouteTableId": {
          "Ref": "SelfPublicRouteTable"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "SelfInternetGateway"
        }
      }
    },
    "SelfPublicSubnetUsEast1a": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "SelfVpc"
        },
        "CidrBlock": "10.24.250.0/24",
        "AvailabilityZone": "us-east-1a",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "self-nat-public-UsEast1a"
          }
        ]
      }
    },
    "SelfPublicRouteAssocUsEast1a": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "SelfPublicSubnetUsEast1a"
        },
        "RouteTableId": {
          "Ref": "SelfPublicRouteTable"
        }
      }
    },
    "SelfNatEipUsEast1a": {
      "Type": "AWS::EC2::EIP",
      "DependsOn": "SelfGatewayAttachment",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "SelfNatGatewayUsEast1a": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "SelfNatEipUsEast1a",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "SelfPublicSubnetUsEast1a"
        }
      }
    },
    "SelfPublicSubnetUsEast1b": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "SelfVpc"
        },
        "CidrBlock": "10.24.251.0/24",
        "AvailabilityZone": "us-east-1b",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "self-nat-public-UsEast1b"
          }
        ]
      }
    },
    "SelfPublicRouteAssocUsEast1b": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "SelfPublicSubnetUsEast1b"
        },
        "RouteTableId": {
          "Ref": "SelfPublicRouteTable"
        }
      }
    },
    "SelfNatEipUsEast1b": {
      "Type": "AWS::EC2::EIP",
      "DependsOn": "SelfGatewayAttachment",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "SelfNatGatewayUsEast1b": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "SelfNatEipUsEast1b",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "SelfPublicSubnetUsEast1b"
        }
      }
    },
    "SelfPublicSubnetUsEast1c": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "SelfVpc"
        },
        "CidrBlock": "10.24.252.0/24",
        "AvailabilityZone": "us-east-1c",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "self-nat-public-UsEast1c"
          }
        ]
      }
    },
    "SelfPublicRouteAssocUsEast1c": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "SelfPublicSubnetUsEast1c"
        },
        "RouteTableId": {
          "Ref": "SelfPublicRouteTable"
        }
      }
    },
    "SelfNatEipUsEast1c": {
      "Type": "AWS::EC2::EIP",
      "DependsOn": "SelfGatewayAttachment",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "SelfNatGatewayUsEast1c": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "SelfNatEipUsEast1c",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "SelfPublicSubnetUsEast1c"
        }
      }
    },
    "GreenPrivateUsEast1a": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "MapPublicIpOnLaunch": false,
        "VpcId": {
          "Ref": "SelfVpc"
        },
        "CidrBlock": "10.24.32.0/24",
        "AvailabilityZone": "us-east-1a",
        "Tags": [
          {
            "Key": "Application",
            "Value": {
              "Ref": "AWS::StackName"
            }
          },
          {
            "Key": "Name",
            "Value": "GreenPrivateUsEast1a"
          }
        ]
      }
    },
    "GreenPrivateUsEast1aRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "SelfVpc"
        },
        "Tags": [
          {
            "Key": "Application",
            "Value": {
              "Ref": "AWS::StackName"
            }
          },
          {
            "Key": "Name",
            "Value": "GreenPrivateUsEast1a"
          }
        ]
      }
    },
    "GreenPrivateUsEast1aPrivateRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "GreenPrivateUsEast1aRouteTable"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "SelfNatGatewayUsEast1a"
        }
      }
    },
    "GreenPrivateUsEast1aRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "GreenPrivateUsEast1a"
        },
        "RouteTableId": {
          "Ref": "GreenPrivateUsEast1aRouteTable"
        }
      }
    },
    "GreenPrivateUsEast1aNetworkAclAssociation": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "GreenPrivateUsEast1a"
        },
        "NetworkAclId": {
          "Ref": "SelfNetworkAcl"
        }
      }
    },
    "GreenPrivateUsEast1b": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "MapPublicIpOnLaunch": false,
        "VpcId": {
          "Ref": "SelfVpc"
        },
        "CidrBlock": "10.24.33.0/24",
        "AvailabilityZone": "us-east-1b",
        "Tags": [
          {
            "Key": "Application",
            "Value": {
              "Ref": "AWS::StackName"
            }
          },
          {
            "Key": "Name",
            "Value": "GreenPrivateUsEast1b"
          }
        ]
      }
    },
    "GreenPrivateUsEast1bRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "SelfVpc"
        },
        "Tags": [
          {
            "Key": "Application",
            "Value": {
              "Ref": "AWS::StackName"
            }
          },
          {
            "Key": "Name",
            "Value": "GreenPrivateUsEast1b"
          }
        ]
      }
    },
    "GreenPrivateUsEast1bPrivateRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "GreenPrivateUsEast1bRouteTable"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "SelfNatGatewayUsEast1b"
        }
      }
    },
    "GreenPrivateUsEast1bRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "GreenPrivateUsEast1b"
        },
        "RouteTableId": {
          "Ref": "GreenPrivateUsEast1bRouteTable"
        }
      }
    },
    "GreenPrivateUsEast1bNetworkAclAssociation": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "GreenPrivateUsEast1b"
        },
        "NetworkAclId": {
          "Ref": "SelfNetworkAcl"
        }
      }
    },
    "GreenPrivateUsEast1c": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "MapPublicIpOnLaunch": false,
        "VpcId": {
          "Ref": "SelfVpc"
        },
        "CidrBlock": "10.24.34.0/24",
        "AvailabilityZone": "us-east-1c",
        "Tags": [
          {
            "Key": "Application",
            "Value": {
              "Ref": "AWS::StackName"
            }
          },
          {
            "Key": "Name",
            "Value": "GreenPrivateUsEast1c"
          }
        ]
      }
    },
    "GreenPrivateUsEast1cRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "SelfVpc"
        },
        "Tags": [
          {
            "Key": "Application",
            "Value": {
              "Ref": "AWS::StackName"
            }
          },
          {
            "Key": "Name",
            "Value": "GreenPrivateUsEast1c"
          }
        ]
      }
    },
    "GreenPrivateUsEast1cPrivateRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "GreenPrivateUsEast1cRouteTable"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "SelfNatGatewayUsEast1c"
        }
      }
    },
    "GreenPrivateUsEast1cRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "GreenPrivateUsEast1c"
        },
        "RouteTableId": {
          "Ref": "GreenPrivateUsEast1cRouteTable"
        }
      }
    },
    "GreenPrivateUsEast1cNetworkAclAssociation": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "GreenPrivateUsEast1c"
        },
        "NetworkAclId": {
          "Ref": "SelfNetworkAcl"
        }
      }
    },
    "VPCEndpoint": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PolicyDocument": {
          "Version": "2012-10-17",
          "Statement": [
            {
              "Effect": "Allow",
              "Principal": "*",
              "Action": [
                "*"
              ],
              "Resource": [
                "*"
              ]
            }
          ]
        },
        "RouteTableIds": [
          {
            "Ref": "GreenPrivateUsEast1aRouteTable"
          },
          {
            "Ref": "GreenPrivateUsEast1bRouteTable"
          },
          {
            "Ref": "GreenPrivateUsEast1cRouteTable"
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".s3"
            ]
          ]
        },
        "VpcId": {
          "Ref": "SelfVpc"
        }
      }
    },
    "VPCEndpointSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow access from the VPC cidr",
        "VpcId": {
          "Ref": "SelfVpc"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": 443,
            "ToPort": 443,
            "CidrIp": "10.24.0.0/16"
          }
        ]
      }
    },
    "OpenSearchVpcEndpoint": {
      "Type": "AWS::OpenSearchServerless::VpcEndpoint",
      "Properties": {
        "Name": "open-search-vpce",
        "VpcId": {
          "Ref": "SelfVpc"
        },
        "SubnetIds": [
          {
            "Ref": "GreenPrivateUsEast1a"
          },
          {
            "Ref": "GreenPrivateUsEast1c"
          }
        ],
        "SecurityGroupIds": [
          {
            "Ref": "VPCEndpointSecurityGroup"
          }
        ]
      }
    },
    "bedrockVPCEndpoint": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PolicyDocument": {
          "Version": "2012-10-17",
          "Statement": [
            {
              "Effect": "Allow",
              "Principal": {
                "AWS": [
                  {
                    "Ref": "AWS::AccountId"
                  },
                  {
                    "Ref": "ExternalAccountId"
                  }
                ]
              },
              "Action": "*",
              "Resource": "*"
            }
          ]
        },
        "PrivateDnsEnabled": true,
        "ServiceName": {
          "Fn::Sub": "com.amazonaws.${AWS::Region}.bedrock"
        },
        "SubnetIds": [
          {
            "Ref": "GreenPrivateUsEast1a"
          },
          {
            "Ref": "GreenPrivateUsEast1c"
          }
        ],
        "SecurityGroupIds": [
          {
            "Ref": "VPCEndpointSecurityGroup"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "bedrock-vpce"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "SelfVpc"
        }
      }
    },
    "bedrockagentVPCEndpoint": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PolicyDocument": {
          "Version": "2012-10-17",
          "Statement": [
            {
              "Effect": "Allow",
              "Principal": {
                "AWS": [
                  {
                    "Ref": "AWS::AccountId"
                  },
                  {
                    "Ref": "ExternalAccountId"
                  }
                ]
              },
              "Action": "*",
              "Resource": "*"
            }
          ]
        },
        "PrivateDnsEnabled": true,
        "ServiceName": {
          "Fn::Sub": "com.amazonaws.${AWS::Region}.bedrock-agent"
        },
        "SubnetIds": [
          {
            "Ref": "GreenPrivateUsEast1a"
          },
          {
            "Ref": "GreenPrivateUsEast1c"
          }
        ],
        "SecurityGroupIds": [
          {
            "Ref": "VPCEndpointSecurityGroup"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "bedrock-agent-vpce"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "SelfVpc"
        }
      }
    },
    "bedrockruntimeVPCEndpoint": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PolicyDocument": {
          "Version": "2012-10-17",
          "Statement": [
            {
              "Effect": "Allow",
              "Principal": {
                "AWS": [
                  {
                    "Ref": "AWS::AccountId"
                  },
                  {
                    "Ref": "ExternalAccountId"
                  }
                ]
              },
              "Action": "*",
              "Resource": "*"
            }
          ]
        },
        "PrivateDnsEnabled": true,
        "ServiceName": {
          "Fn::Sub": "com.amazonaws.${AWS::Region}.bedrock-runtime"
        },
        "SubnetIds": [
          {
            "Ref": "GreenPrivateUsEast1a"
          },
          {
            "Ref": "GreenPrivateUsEast1c"
          }
        ],
        "SecurityGroupIds": [
          {
            "Ref": "VPCEndpointSecurityGroup"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "bedrock-runtime-vpce"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "SelfVpc"
        }
      }
    },
    "bedrockagentruntimeVPCEndpoint": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PolicyDocument": {
          "Version": "2012-10-17",
          "Statement": [
            {
              "Effect": "Allow",
              "Principal": {
                "AWS": [
                  {
                    "Ref": "AWS::AccountId"
                  },
                  {
                    "Ref": "ExternalAccountId"
                  }
                ]
              },
              "Action": "*",
              "Resource": "*"
            }
          ]
        },
        "PrivateDnsEnabled": true,
        "ServiceName": {
          "Fn::Sub": "com.amazonaws.${AWS::Region}.bedrock-agent-runtime"
        },
        "SubnetIds": [
          {
            "Ref": "GreenPrivateUsEast1a"
          },
          {
            "Ref": "GreenPrivateUsEast1c"
          }
        ],
        "SecurityGroupIds": [
          {
            "Ref": "VPCEndpointSecurityGroup"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "bedrock-agent-runtime-vpce"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "SelfVpc"
        }
      }
    }
  },
  "Outputs": {
    "PrivateSubnets": {
      "Description": "Comma separated list of all private sub-nets",
      "Value": {
        "Fn::Join": [
          ", ",
          [
            {
              "Ref": "GreenPrivateUsEast1a"
            },
            {
              "Ref": "GreenPrivateUsEast1b"
            },
            {
              "Ref": "GreenPrivateUsEast1c"
            }
          ]
        ]
      },
      "Export": {
        "Name": {
          "Fn::Join": [
            "-",
            [
              {
                "Ref": "AWS::Region"
              },
              {
                "Ref": "AWS::StackName"
              },
              "Private-Subnets"
            ]
          ]
        }
      }
    },
    "PrivateSubnetRouteTableIds": {
      "Description": "Comma separated list of all private sub-net route table IDs",
      "Value": {
        "Fn::Join": [
          ", ",
          [
            {
              "Ref": "GreenPrivateUsEast1aRouteTable"
            },
            {
              "Ref": "GreenPrivateUsEast1bRouteTable"
            },
            {
              "Ref": "GreenPrivateUsEast1cRouteTable"
            }
          ]
        ]
      },
      "Export": {
        "Name": {
          "Fn::Join": [
            "-",
            [
              {
                "Ref": "AWS::Region"
              },
              {
                "Ref": "AWS::StackName"
              },
              "Private-Subnets-RouteTableIds"
            ]
          ]
        }
      }
    },
    "SubnetGroupCIDR": {
      "Description": "CIDR for this subnetgroup",
      "Value": "10.24.32.0/21",
      "Export": {
        "Name": {
          "Fn::Join": [
            "-",
            [
              {
                "Ref": "AWS::Region"
              },
              {
                "Ref": "AWS::StackName"
              },
              "CIDR"
            ]
          ]
        }
      }
    },
    "OpenSearchVpcEndpoint": {
      "Description": "The Id of the VPC endpoint that can be used by to access serverless open search from the VPC.",
      "Value": {
        "Ref": "OpenSearchVpcEndpoint"
      },
      "Export": {
        "Name": {
          "Fn::Sub": "${AWS::Region}-synapse-dev-vpc-2-open-search-vpce"
        }
      }
    },
    "bedrockVPCEndpoint": {
      "Description": "The Id of the VPC endpoint used to access Bedrock from the VPC",
      "Value": {
        "Ref": "bedrockVPCEndpoint"
      },
      "Export": {
        "Name": {
          "Fn::Sub": "${AWS::Region}-synapse-dev-vpc-2-bedrock-vpce"
        }
      }
    },
    "bedrockagentVPCEndpoint": {
      "Description": "The Id of the VPC endpoint used to access Bedrock from the VPC",
      "Value": {
        "Ref": "bedrockagentVPCEndpoint"
      },
      "Export": {
        "Name": {
          "Fn::Sub": "${AWS::Region}-synapse-dev-vpc-2-bedrockagent-vpce"
        }
      }
    },
    "bedrockruntimeVPCEndpoint": {
      "Description": "The Id of the VPC endpoint used to access Bedrock from the VPC",
      "Value": {
        "Ref": "bedrockruntimeVPCEndpoint"
      },
      "Export": {
        "Name": {
          "Fn::Sub": "${AWS::Region}-synapse-dev-vpc-2-bedrockruntime-vpce"
        }
      }
    },
    "bedrockagentruntimeVPCEndpoint": {
      "Description": "The Id of the VPC endpoint used to access Bedrock from the VPC",
      "Value": {
        "Ref": "bedrockagentruntimeVPCEndpoint"
      },
      "Export": {
        "Name": {
          "Fn::Sub": "${AWS::Region}-synapse-dev-vpc-2-bedrockagentruntime-vpce"
        }
      }
    }
  },
  "Parameters": {
    "ExternalAccountId": {
      "Type": "String",
      "Description": "External AWS Account ID to grant access to the VPC Endpoints"
    }
  }
}
