cfn_benchmark/cfn_templates_greenfield/Sage-Bionetworks__Synapse-Stack-Builder/src/test/resources/vpc/private-subnet-red-test.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Creates one public subnet per availability zone.",
  "Resources": {
    "SelfVpc": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.24.0.0/16",
        "EnableDnsSupport": true,
        "EnableDnsHostnames": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Sub": "${AWS::StackName}-vpc"
            }
          }
        ]
      }
    },
    "SelfNetworkAcl": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "SelfVpc"
        }
      }
    },
    "SelfNetworkAclEntryIngress": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "SelfNetworkAcl"
        },
        "RuleNumber": 100,
        "Protocol": 6,
        "RuleAction": "allow",
        "Egress": false,
        "CidrBlock": "0.0.0.0/0",
        "PortRange": {
          "From": 1024,
          "To": 65535
        }
      }
    },
    "SelfNetworkAclEntryEgressHttps": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "SelfNetworkAcl"
        },
        "RuleNumber": 100,
        "Protocol": 6,
        "RuleAction": "allow",
        "Egress": true,
        "CidrBlock": "0.0.0.0/0",
        "PortRange": {
          "From": 443,
          "To": 443
        }
      }
    },
    "SelfNetworkAclEntryEgressHttp": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "SelfNetworkAcl"
        },
        "RuleNumber": 110,
        "Protocol": 6,
        "RuleAction": "allow",
        "Egress": true,
        "CidrBlock": "0.0.0.0/0",
        "PortRange": {
          "From": 80,
          "To": 80
        }
      }
    },
    "SelfInternetGateway": {
      "Type": "AWS::EC2::InternetGateway"
    },
    "SelfGatewayAttachment": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "SelfVpc"
        },
        "InternetGatewayId": {
          "Ref": "SelfInternetGateway"
        }
      }
    },
    "SelfPublicRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "SelfVpc"
        }
      }
    },
    "SelfPublicRoute": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "SelfGatewayAttachment",
      "Properties": {
        "RouteTableId": {
          "Ref": "SelfPublicRouteTable"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "SelfInternetGateway"
        }
      }
    },
    "SelfPublicSubnetUsEast1a": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "SelfVpc"
        },
        "CidrBlock": "10.24.250.0/24",
        "AvailabilityZone": "us-east-1a",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "self-nat-public-UsEast1a"
          }
        ]
      }
    },
    "SelfPublicRouteAssocUsEast1a": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "SelfPublicSubnetUsEast1a"
        },
        "RouteTableId": {
          "Ref": "SelfPublicRouteTable"
        }
      }
    },
    "SelfNatEipUsEast1a": {
      "Type": "AWS::EC2::EIP",
      "DependsOn": "SelfGatewayAttachment",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "SelfNatGatewayUsEast1a": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "SelfNatEipUsEast1a",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "SelfPublicSubnetUsEast1a"
        }
      }
    },
    "SelfPublicSubnetUsEast1b": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "SelfVpc"
        },
        "CidrBlock": "10.24.251.0/24",
        "AvailabilityZone": "us-east-1b",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "self-nat-public-UsEast1b"
          }
        ]
      }
    },
    "SelfPublicRouteAssocUsEast1b": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "SelfPublicSubnetUsEast1b"
        },
        "RouteTableId": {
          "Ref": "SelfPublicRouteTable"
        }
      }
    },
    "SelfNatEipUsEast1b": {
      "Type": "AWS::EC2::EIP",
      "DependsOn": "SelfGatewayAttachment",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "SelfNatGatewayUsEast1b": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "SelfNatEipUsEast1b",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "SelfPublicSubnetUsEast1b"
        }
      }
    },
    "SelfPublicSubnetUsEast1c": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "SelfVpc"
        },
        "CidrBlock": "10.24.252.0/24",
        "AvailabilityZone": "us-east-1c",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "self-nat-public-UsEast1c"
          }
        ]
      }
    },
    "SelfPublicRouteAssocUsEast1c": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "SelfPublicSubnetUsEast1c"
        },
        "RouteTableId": {
          "Ref": "SelfPublicRouteTable"
        }
      }
    },
    "SelfNatEipUsEast1c": {
      "Type": "AWS::EC2::EIP",
      "DependsOn": "SelfGatewayAttachment",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "SelfNatGatewayUsEast1c": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "SelfNatEipUsEast1c",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "SelfPublicSubnetUsEast1c"
        }
      }
    },
    "RedPrivateUsEast1a": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "MapPublicIpOnLaunch": false,
        "VpcId": {
          "Ref": "SelfVpc"
        },
        "CidrBlock": "10.24.24.0/24",
        "AvailabilityZone": "us-east-1a",
        "Tags": [
          {
            "Key": "Application",
            "Value": {
              "Ref": "AWS::StackName"
            }
          },
          {
            "Key": "Name",
            "Value": "RedPrivateUsEast1a"
          }
        ]
      }
    },
    "RedPrivateUsEast1aRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "SelfVpc"
        },
        "Tags": [
          {
            "Key": "Application",
            "Value": {
              "Ref": "AWS::StackName"
            }
          },
          {
            "Key": "Name",
            "Value": "RedPrivateUsEast1a"
          }
        ]
      }
    },
    "RedPrivateUsEast1aPrivateRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "RedPrivateUsEast1aRouteTable"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "SelfNatGatewayUsEast1a"
        }
      }
    },
    "RedPrivateUsEast1aRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "RedPrivateUsEast1a"
        },
        "RouteTableId": {
          "Ref": "RedPrivateUsEast1aRouteTable"
        }
      }
    },
    "RedPrivateUsEast1aNetworkAclAssociation": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "RedPrivateUsEast1a"
        },
        "NetworkAclId": {
          "Ref": "SelfNetworkAcl"
        }
      }
    },
    "RedPrivateUsEast1b": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "MapPublicIpOnLaunch": false,
        "VpcId": {
          "Ref": "SelfVpc"
        },
        "CidrBlock": "10.24.25.0/24",
        "AvailabilityZone": "us-east-1b",
        "Tags": [
          {
            "Key": "Application",
            "Value": {
              "Ref": "AWS::StackName"
            }
          },
          {
            "Key": "Name",
            "Value": "RedPrivateUsEast1b"
          }
        ]
      }
    },
    "RedPrivateUsEast1bRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "SelfVpc"
        },
        "Tags": [
          {
            "Key": "Application",
            "Value": {
              "Ref": "AWS::StackName"
            }
          },
          {
            "Key": "Name",
            "Value": "RedPrivateUsEast1b"
          }
        ]
      }
    },
    "RedPrivateUsEast1bPrivateRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "RedPrivateUsEast1bRouteTable"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "SelfNatGatewayUsEast1b"
        }
      }
    },
    "RedPrivateUsEast1bRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "RedPrivateUsEast1b"
        },
        "RouteTableId": {
          "Ref": "RedPrivateUsEast1bRouteTable"
        }
      }
    },
    "RedPrivateUsEast1bNetworkAclAssociation": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "RedPrivateUsEast1b"
        },
        "NetworkAclId": {
          "Ref": "SelfNetworkAcl"
        }
      }
    },
    "RedPrivateUsEast1c": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "MapPublicIpOnLaunch": false,
        "VpcId": {
          "Ref": "SelfVpc"
        },
        "CidrBlock": "10.24.26.0/24",
        "AvailabilityZone": "us-east-1c",
        "Tags": [
          {
            "Key": "Application",
            "Value": {
              "Ref": "AWS::StackName"
            }
          },
          {
            "Key": "Name",
            "Value": "RedPrivateUsEast1c"
          }
        ]
      }
    },
    "RedPrivateUsEast1cRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "SelfVpc"
        },
        "Tags": [
          {
            "Key": "Application",
            "Value": {
              "Ref": "AWS::StackName"
            }
          },
          {
            "Key": "Name",
            "Value": "RedPrivateUsEast1c"
          }
        ]
      }
    },
    "RedPrivateUsEast1cPrivateRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "RedPrivateUsEast1cRouteTable"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "SelfNatGatewayUsEast1c"
        }
      }
    },
    "RedPrivateUsEast1cRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "RedPrivateUsEast1c"
        },
        "RouteTableId": {
          "Ref": "RedPrivateUsEast1cRouteTable"
        }
      }
    },
    "RedPrivateUsEast1cNetworkAclAssociation": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "RedPrivateUsEast1c"
        },
        "NetworkAclId": {
          "Ref": "SelfNetworkAcl"
        }
      }
    },
    "VPCEndpoint": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PolicyDocument": {
          "Version": "2012-10-17",
          "Statement": [
            {
              "Effect": "Allow",
              "Principal": "*",
              "Action": [
                "*"
              ],
              "Resource": [
                "*"
              ]
            }
          ]
        },
        "RouteTableIds": [
          {
            "Ref": "RedPrivateUsEast1aRouteTable"
          },
          {
            "Ref": "RedPrivateUsEast1bRouteTable"
          },
          {
            "Ref": "RedPrivateUsEast1cRouteTable"
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".s3"
            ]
          ]
        },
        "VpcId": {
          "Ref": "SelfVpc"
        }
      }
    }
  },
  "Outputs": {
    "PrivateSubnets": {
      "Description": "Comma separated list of all private sub-nets",
      "Value": {
        "Fn::Join": [
          ", ",
          [
            {
              "Ref": "RedPrivateUsEast1a"
            },
            {
              "Ref": "RedPrivateUsEast1b"
            },
            {
              "Ref": "RedPrivateUsEast1c"
            }
          ]
        ]
      },
      "Export": {
        "Name": {
          "Fn::Join": [
            "-",
            [
              {
                "Ref": "AWS::Region"
              },
              {
                "Ref": "AWS::StackName"
              },
              "Private-Subnets"
            ]
          ]
        }
      }
    },
    "PrivateSubnetRouteTableIds": {
      "Description": "Comma separated list of all private sub-net route table IDs",
      "Value": {
        "Fn::Join": [
          ", ",
          [
            {
              "Ref": "RedPrivateUsEast1aRouteTable"
            },
            {
              "Ref": "RedPrivateUsEast1bRouteTable"
            },
            {
              "Ref": "RedPrivateUsEast1cRouteTable"
            }
          ]
        ]
      },
      "Export": {
        "Name": {
          "Fn::Join": [
            "-",
            [
              {
                "Ref": "AWS::Region"
              },
              {
                "Ref": "AWS::StackName"
              },
              "Private-Subnets-RouteTableIds"
            ]
          ]
        }
      }
    },
    "SubnetGroupCIDR": {
      "Description": "CIDR for this subnetgroup",
      "Value": "10.24.24.0/21",
      "Export": {
        "Name": {
          "Fn::Join": [
            "-",
            [
              {
                "Ref": "AWS::Region"
              },
              {
                "Ref": "AWS::StackName"
              },
              "CIDR"
            ]
          ]
        }
      }
    }
  }
}
